// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render 1 1 1`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"field\\"
    >
      <label>
        Owner
      </label>
      <div
        aria-expanded=\\"false\\"
        aria-multiselectable=\\"false\\"
        class=\\"ui fluid selection dropdown\\"
        label=\\"Owner\\"
        name=\\"author\\"
        role=\\"listbox\\"
        tabindex=\\"0\\"
      >
        <div
          aria-atomic=\\"true\\"
          aria-live=\\"polite\\"
          class=\\"default text\\"
          role=\\"alert\\"
        >
          Select...
        </div>
        <i
          aria-hidden=\\"true\\"
          class=\\"dropdown icon\\"
        />
        <div
          class=\\"menu transition\\"
        />
      </div>
    </div>
  </div>
</body>"
`;

exports[`Render 1 1 2`] = `
"<body>
  <div
    id=\\"root\\"
  />
  <div>
    <div
      class=\\"field\\"
    >
      <label>
        Categories
      </label>
      <div
        aria-expanded=\\"false\\"
        aria-multiselectable=\\"true\\"
        class=\\"ui fluid multiple selection dropdown\\"
        label=\\"Categories\\"
        name=\\"categories\\"
        role=\\"listbox\\"
        tabindex=\\"0\\"
      >
        <div
          aria-atomic=\\"true\\"
          aria-live=\\"polite\\"
          class=\\"default text\\"
          role=\\"alert\\"
        >
          Select...
        </div>
        <i
          aria-hidden=\\"true\\"
          class=\\"dropdown icon\\"
        />
        <div
          class=\\"menu transition\\"
        />
      </div>
    </div>
  </div>
</body>"
`;
